# agent-rag

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  docker-compose.yml  opencode.json  pyproject.toml
alembic/: env.py
alembic/versions/: 4a2fb1c77a65_initial_tables.py  6c2e8f1a9d4b_add_title_updated_at_to_agent_traces.py  7d3f3e2b1c6a_add_created_at_to_file_index.py  8e4f4g3d2e7b_add_processing_status_to_file_index.py
docker/: pg-age.Dockerfile
docs/: architecture.md  conventions.md  knowledge-maintenance.md  project-design-init.md  project-frontend-design.md
docs/adr/: 001-lightrag-as-unified-retrieval.md  002-file-importance-grading.md
docs/modules/: api.md  core.md  domain.md  infrastructure.md  utils.md
docs/roadmap/: current.md
docs/schema/: index.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: chat.ts  client.ts  documents.ts  sse.ts
frontend/src/components/: AgentProgress.tsx  ChatInput.tsx  ConfirmDialog.tsx  ConversationItem.tsx  DocumentTable.tsx  EmptyChat.tsx  LanguageToggle.tsx  Layout.tsx  MessageBubble.tsx  MessageList.tsx  Navbar.tsx  Sidebar.tsx  StatsCard.tsx  ToolCallCard.tsx  UploadZone.tsx
frontend/src/hooks/: useConversations.ts  useSSE.ts
frontend/src/i18n/: index.ts
frontend/src/pages/: ChatPage.tsx  (+1 more)
src/rag_agent/: __init__.py  config.py  main.py
tasks/: _template.md
tests/unit/: test_engine.py  test_enums.py  test_orchestrator_stream.py  test_schemas.py  test_sse_protocol.py  test_text.py  test_tools.py  test_utils.py
(+29 files in other folders)
